--- a/public/peti/index.html
+++ b/public/peti/index.html
@@ -196,7 +196,7 @@
                class="card-link"
                 target="_blank" rel="noopener" 
                aria-label="Open Mango Metrics — PDF Case">
-              <img src="https://picsum.photos/1200/600?random=22" alt="Mango charts and crate label"
+              <img src="" alt=""
                    class="stylized-image object-cover h-40 w-full" loading="lazy">
 
               <div class="card-header p-2">
