updated front page path

--- a/src/the-dispatch.html
+++ b/src/the-dispatch.html
@@ -17,7 +17,7 @@
     <div class="container nav" role="navigation" aria-label="Primary">
       <div class="brand">Inklet <em>Lab</em> <small style="font-weight:600;color:var(--ink-2);opacity:.7;">· 14.4.1891 · Vol. I Part. 8</small></div>
       <ul>
-        <li><a href="/front-page/">Front Page</a></li>
+        <li><a href="/">Front Page</a></li>
         <li><a href="/the-dispatch/" aria-current="page">The Dispatch</a></li>
         <li><a href="/peti/">Peti</a></li>
         <li><a href="/the-balcony/">The Balcony</a></li>
