Updated front page path

--- a/src/dump-and-discover.html
+++ b/src/dump-and-discover.html
@@ -17,7 +17,7 @@
 
 <!-- LEFT NAV -->
 <nav class="sidenav" aria-label="Site">
-  <a href="/front-page/">Front Page</a>
+  <a href="/">Front Page</a>
   <a href="/the-dispatch/">The Dispatch</a>
   <a href="/peti/">PETI</a>
   <a href="/the-balcony/">The Balcony</a>
