--- a/src/etcetera.html
+++ b/src/etcetera.html
@@ -35,7 +35,7 @@
                 <div class="flex justify-between items-center mb-20 md:mb-24">
                     <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900 transition-colors duration-200">Inklet Lab</a>
                     <nav class="flex items-center space-x-6 md:space-x-8">
-                         <a href="/front-page/" class="text-base font-medium text-gray-500 hover:text-gray-900 transition-colors duration-200">Front Page</a>
+                         <a href="/" class="text-base font-medium text-gray-500 hover:text-gray-900 transition-colors duration-200">Front Page</a>
                          <a href="/the-dispatch/" class="text-base font-medium text-gray-500 hover:text-gray-900 transition-colors duration-200">The Dispatch</a>
                          <a href="/peti/" class="text-base font-medium text-gray-500 hover:text-gray-900 transition-colors duration-200">Peti</a>
                          <a href="/the-balcony/" class="text-base font-medium text-gray-500 hover:text-gray-900 transition-colors duration-200">The Balcony</a>
