--- a/src/peti.html
+++ b/src/peti.html
@@ -20,7 +20,7 @@
   <nav class="vertical-nav">
     <div class="nav-qr" aria-hidden="true"></div>
     <ul class="vertical-nav-list">
-      <li><a href="/front-page/" class="nav-code">FRONT PAGE</a></li>
+      <li><a href="/" class="nav-code">FRONT PAGE</a></li>
       <li><a href="/the-dispatch/" class="nav-code">THE DISPATCH</a></li>
       <li><a href="/peti/" class="nav-pill active">PETI</a></li>
       <li><a href="/the-balcony/" class="nav-code">The Balcony</a></li>
