--- a/src/the-balcony.html
+++ b/src/the-balcony.html
@@ -13,11 +13,11 @@
 <body>
   <div class="wrap">
     <div class="hero">
-      <a href="/front-page/" class="pretitle">Inklet Lab Presents</a>
+      <a href="/" class="pretitle">Inklet Lab Presents</a>
       <canvas id="neon" aria-label="THE BALCONY"></canvas>
       <div class="tagline">Pop/Alt Sociocultural Conversations · Stories from the Balcony</div>
       <div class="comingsoon">Coming Soon</div>
-      <a href="/front-page/" class="homebtn">Go Back to the Front Page</a>
+      <a href="/" class="homebtn">Go Back to the Front Page</a>
     </div>
   </div>
 
