--- a/src/the-point.html
+++ b/src/the-point.html
@@ -22,7 +22,7 @@
   <div class="rule"></div>
 
   <nav class="nav" aria-label="Site">
-    <a href="/front-page/">Front Page</a>
+    <a href="/">Front Page</a>
     <a href="/the-dispatch/">The Dispatch</a>
     <a href="/peti/">Peti</a>
     <a href="/the-balcony/">The Balcony</a>
